# basic-opencl

./: CMakeLists.txt  LICENSE  README.md
include/automy/basic_opencl/: Buffer1D.h  Buffer3D.h  CommandQueue.h  Context.h  Image2D.h  Kernel.h  Matrix.h  OpenCL.h  Program.h
include/opencl/: Buffer.h  Buffer2D.h  CommandQueue.h  Context.h  Kernel.h  Program.h  opencl.h
kernel/: math.cl
src/: Context.cpp  Kernel.cpp  Program.cpp
